src/decklinkcapi/cpp/decklinkcapi.h

class IDeckLinkDisplayMode;
class IDeckLinkDisplayModeIterator;
class IDeckLinkVideoFrame;
class IDeckLinkOutput;
typedef void IDeckLinkDisplayMode;
typedef void IDeckLinkDisplayModeIterator;
typedef void IDeckLinkVideoFrame;
typedef void IDeckLinkOutput;
CAPI bool IDeckLinkOutput_ScheduleVideoFrame(IDeckLinkOutput* output, IDeckLinkVideoFrame* frame, long long displayTime, long long displayDuration, long long timeScale);
CAPI IDeckLinkDisplayMode* IDeckLinkDisplayModeIterator_Next(IDeckLinkDisplayModeIterator* iterator);
CAPI bool IDeckLinkDisplayMode_GetName(IDeckLinkDisplayMode* mode, char* str, long long len);
CAPI int IDeckLinkDisplayMode_GetDisplayMode(IDeckLinkDisplayMode* mode);
CAPI int IDeckLinkDisplayMode_GetWidth(IDeckLinkDisplayMode* mode);
CAPI int IDeckLinkDisplayMode_GetHeight(IDeckLinkDisplayMode* mode);