src/main/java/com/loadingbyte/cinecred/natives/decklinkcapi/decklinkcapi_h.java


    private static class IDeckLinkOutput_ScheduleVideoFrame {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_BOOL,
            decklinkcapi_h.C_POINTER,
            decklinkcapi_h.C_POINTER,
            decklinkcapi_h.C_LONG_LONG,
            decklinkcapi_h.C_LONG_LONG,
            decklinkcapi_h.C_LONG_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLinkOutput_ScheduleVideoFrame");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_ScheduleVideoFrame(IDeckLinkOutput *output, IDeckLinkVideoFrame *frame, long long displayTime, long long displayDuration, long long timeScale)
     * }
     */
    public static FunctionDescriptor IDeckLinkOutput_ScheduleVideoFrame$descriptor() {
        return IDeckLinkOutput_ScheduleVideoFrame.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_ScheduleVideoFrame(IDeckLinkOutput *output, IDeckLinkVideoFrame *frame, long long displayTime, long long displayDuration, long long timeScale)
     * }
     */
    public static MethodHandle IDeckLinkOutput_ScheduleVideoFrame$handle() {
        return IDeckLinkOutput_ScheduleVideoFrame.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_ScheduleVideoFrame(IDeckLinkOutput *output, IDeckLinkVideoFrame *frame, long long displayTime, long long displayDuration, long long timeScale)
     * }
     */
    public static MemorySegment IDeckLinkOutput_ScheduleVideoFrame$address() {
        return IDeckLinkOutput_ScheduleVideoFrame.ADDR;
    }

    /**
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_ScheduleVideoFrame(IDeckLinkOutput *output, IDeckLinkVideoFrame *frame, long long displayTime, long long displayDuration, long long timeScale)
     * }
     */
    public static boolean IDeckLinkOutput_ScheduleVideoFrame(MemorySegment output, MemorySegment frame, long displayTime, long displayDuration, long timeScale) {
        var mh$ = IDeckLinkOutput_ScheduleVideoFrame.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLinkOutput_ScheduleVideoFrame", output, frame, displayTime, displayDuration, timeScale);
            }
            return (boolean)mh$.invokeExact(output, frame, displayTime, displayDuration, timeScale);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLinkDisplayModeIterator_Next {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_POINTER,
            decklinkcapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLinkDisplayModeIterator_Next");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * IDeckLinkDisplayMode *IDeckLinkDisplayModeIterator_Next(IDeckLinkDisplayModeIterator *iterator)
     * }
     */
    public static FunctionDescriptor IDeckLinkDisplayModeIterator_Next$descriptor() {
        return IDeckLinkDisplayModeIterator_Next.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * IDeckLinkDisplayMode *IDeckLinkDisplayModeIterator_Next(IDeckLinkDisplayModeIterator *iterator)
     * }
     */
    public static MethodHandle IDeckLinkDisplayModeIterator_Next$handle() {
        return IDeckLinkDisplayModeIterator_Next.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * IDeckLinkDisplayMode *IDeckLinkDisplayModeIterator_Next(IDeckLinkDisplayModeIterator *iterator)
     * }
     */
    public static MemorySegment IDeckLinkDisplayModeIterator_Next$address() {
        return IDeckLinkDisplayModeIterator_Next.ADDR;
    }

    /**
     * {@snippet lang=c :
     * IDeckLinkDisplayMode *IDeckLinkDisplayModeIterator_Next(IDeckLinkDisplayModeIterator *iterator)
     * }
     */
    public static MemorySegment IDeckLinkDisplayModeIterator_Next(MemorySegment iterator) {
        var mh$ = IDeckLinkDisplayModeIterator_Next.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLinkDisplayModeIterator_Next", iterator);
            }
            return (MemorySegment)mh$.invokeExact(iterator);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLinkDisplayMode_GetName {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_BOOL,
            decklinkcapi_h.C_POINTER,
            decklinkcapi_h.C_POINTER,
            decklinkcapi_h.C_LONG_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLinkDisplayMode_GetName");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * _Bool IDeckLinkDisplayMode_GetName(IDeckLinkDisplayMode *mode, char *str, long long len)
     * }
     */
    public static FunctionDescriptor IDeckLinkDisplayMode_GetName$descriptor() {
        return IDeckLinkDisplayMode_GetName.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * _Bool IDeckLinkDisplayMode_GetName(IDeckLinkDisplayMode *mode, char *str, long long len)
     * }
     */
    public static MethodHandle IDeckLinkDisplayMode_GetName$handle() {
        return IDeckLinkDisplayMode_GetName.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * _Bool IDeckLinkDisplayMode_GetName(IDeckLinkDisplayMode *mode, char *str, long long len)
     * }
     */
    public static MemorySegment IDeckLinkDisplayMode_GetName$address() {
        return IDeckLinkDisplayMode_GetName.ADDR;
    }

    /**
     * {@snippet lang=c :
     * _Bool IDeckLinkDisplayMode_GetName(IDeckLinkDisplayMode *mode, char *str, long long len)
     * }
     */
    public static boolean IDeckLinkDisplayMode_GetName(MemorySegment mode, MemorySegment str, long len) {
        var mh$ = IDeckLinkDisplayMode_GetName.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLinkDisplayMode_GetName", mode, str, len);
            }
            return (boolean)mh$.invokeExact(mode, str, len);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLinkDisplayMode_GetDisplayMode {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_INT,
            decklinkcapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLinkDisplayMode_GetDisplayMode");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int IDeckLinkDisplayMode_GetDisplayMode(IDeckLinkDisplayMode *mode)
     * }
     */
    public static FunctionDescriptor IDeckLinkDisplayMode_GetDisplayMode$descriptor() {
        return IDeckLinkDisplayMode_GetDisplayMode.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int IDeckLinkDisplayMode_GetDisplayMode(IDeckLinkDisplayMode *mode)
     * }
     */
    public static MethodHandle IDeckLinkDisplayMode_GetDisplayMode$handle() {
        return IDeckLinkDisplayMode_GetDisplayMode.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int IDeckLinkDisplayMode_GetDisplayMode(IDeckLinkDisplayMode *mode)
     * }
     */
    public static MemorySegment IDeckLinkDisplayMode_GetDisplayMode$address() {
        return IDeckLinkDisplayMode_GetDisplayMode.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int IDeckLinkDisplayMode_GetDisplayMode(IDeckLinkDisplayMode *mode)
     * }
     */
    public static int IDeckLinkDisplayMode_GetDisplayMode(MemorySegment mode) {
        var mh$ = IDeckLinkDisplayMode_GetDisplayMode.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLinkDisplayMode_GetDisplayMode", mode);
            }
            return (int)mh$.invokeExact(mode);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLinkDisplayMode_GetWidth {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_INT,
            decklinkcapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLinkDisplayMode_GetWidth");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int IDeckLinkDisplayMode_GetWidth(IDeckLinkDisplayMode *mode)
     * }
     */
    public static FunctionDescriptor IDeckLinkDisplayMode_GetWidth$descriptor() {
        return IDeckLinkDisplayMode_GetWidth.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int IDeckLinkDisplayMode_GetWidth(IDeckLinkDisplayMode *mode)
     * }
     */
    public static MethodHandle IDeckLinkDisplayMode_GetWidth$handle() {
        return IDeckLinkDisplayMode_GetWidth.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int IDeckLinkDisplayMode_GetWidth(IDeckLinkDisplayMode *mode)
     * }
     */
    public static MemorySegment IDeckLinkDisplayMode_GetWidth$address() {
        return IDeckLinkDisplayMode_GetWidth.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int IDeckLinkDisplayMode_GetWidth(IDeckLinkDisplayMode *mode)
     * }
     */
    public static int IDeckLinkDisplayMode_GetWidth(MemorySegment mode) {
        var mh$ = IDeckLinkDisplayMode_GetWidth.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLinkDisplayMode_GetWidth", mode);
            }
            return (int)mh$.invokeExact(mode);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLinkDisplayMode_GetHeight {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_INT,
            decklinkcapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLinkDisplayMode_GetHeight");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int IDeckLinkDisplayMode_GetHeight(IDeckLinkDisplayMode *mode)
     * }
     */
    public static FunctionDescriptor IDeckLinkDisplayMode_GetHeight$descriptor() {
        return IDeckLinkDisplayMode_GetHeight.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int IDeckLinkDisplayMode_GetHeight(IDeckLinkDisplayMode *mode)
     * }
     */
    public static MethodHandle IDeckLinkDisplayMode_GetHeight$handle() {
        return IDeckLinkDisplayMode_GetHeight.HANDLE;
    }
